fix: fix z-index when global search is requested

--- a/packages/admin-ui-docs/src/css/navbar.scss
+++ b/packages/admin-ui-docs/src/css/navbar.scss
@@ -4,7 +4,7 @@
 }
 
 .navbar {
-  z-index: 1000;
+  z-index: var(--ifm-z-index-fixed);
 
   .navbar__link,
   .dropdown__link {
